# metrix

./: Cargo.toml  README.md
examples/: actix_example.rs  axum_example.rs
src/: lib.rs  macros.rs  registry.rs  tracing_integration.rs
src/exporters/: json_exporter.rs  mod.rs  prometheus.rs  pushgateway.rs
src/metrics/: async_timer.rs  counter.rs  gauge.rs  histogram.rs  meter.rs  mod.rs  timer.rs
src/middleware/: actix_middleware.rs  axum.rs  mod.rs
src/utils/: buckets.rs
