[package]
name = "metrix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
axum = "0.7.6"
bytes = "1.7.2"
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = "0.1.8"
reqwest = "0.12.7"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[[example]]
name = "axum_example"
[[example]]
name = "actix_example"
